# mujoco_examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
include/: imgui_widget.hpp  input_parser.hpp  mujoco_widget.hpp
model/coordinate_frame/: coordinate_frame.xml
model/inverted_pendulum/: inverted_pendulum.xml
scripts/: build.sh  lint.sh  run.sh
src/: main.cpp
